# axum_playground

./: Cargo.toml  README.md  local-tracing.sh
.github/workflows/: rust.yml
src/: main.rs
