[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
axum-tracing-opentelemetry = { version = "0.10.0", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
